# nsexec

./: .travis.yml  README.md  meson.build  meson_options.txt
completions/bash/: nsexec
data/: post-install.sh
data/completions/bash/: nsexec
data/rpm/: nsexec.spec
data/selinux/: nsexec.fc  nsexec.te
data/travis-ci/: Dockerfile
debian/: changelog  control  files  postinst  rules
rpm/: nsexec.spec
src/: bash_syscalls  helper.h  lsm.c  lsm.h  ns_exec.c  ns_mount.c  ns_mount.h  ns_network.c  ns_network.h  ns_seccomp.c  ns_seccomp.h  nsexec.c  nsexec_nic.c
